@@ -1,3 +1,6 @@
+15 November 2010: Wouter
+	- silence 'tcp connect: broken pipe' at low verbosity.
+
 9 November 2010: Wouter
 	- unbound-anchor compiles with openssl 0.9.7.
 
